--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Samurai Dou (PSP) - Weapon List</title>
-<style type="text/css">
+<style>
 html,body{font:14px "Courier New",serif;margin:0 auto;padding:0 3px;background:#511010;}
 
 #cssTable,div{border-collapse:collapse;display:table;margin:5px auto;}
@@ -92,15 +92,15 @@ thead:first-child{color:#fff;background:#333;font-size: 110%;}
 	<tr><td><img alt="47" src="img/sid-blc.png"></td><td>なまくら刀<br>Nama-kura-gatana</td><td>Side</td><td>GovernmentS 40%</td></tr>
 	<tr><td><img alt="48" src="img/one-blc.png"></td><td>なまくら刀<br>Nama-kura-gatana</td><td>One-hand</td><td>GovernmentS 30%</td></tr>
 	
-	<tr><td><img alt="49" src="img/up-blc.png"></td><td>ハルユキ<br>HARUYUKI</td><td>Up</td><td><span title="All Swords:&#013↓ x4, →, →, ← x3, →&#013Max Random Weapon:&#013↑, ↑, ↓, ↓, ← x5, →">Cheat</span><br>Black 1 (vs CPU)</td></tr>
-	<tr><td><img alt="50" src="img/low-grn.png"></td><td>タクマ<br>TAKUMA</td><td>Down</td><td><span title="All Swords:&#013↓ x4, →, →, ← x3, →&#013Max Random Weapon:&#013↑, ↑, ↓, ↓, ← x5, →">Cheat</span><br>Black 2 (vs CPU)</td></tr>
-	<tr><td><img alt="51" src="img/one-red.png"></td><td>ユミコ<br>YUMIKO</td><td>One-hand</td><td><span title="All Swords:&#013↓ x4, →, →, ← x3, →&#013Max Random Weapon:&#013↑, ↑, ↓, ↓, ← x5, →">Cheat</span><br>GovernmentB (vs CPU)</td></tr>
+	<tr><td><img alt="49" src="img/up-blc.png"></td><td>ハルユキ<br>HARUYUKI</td><td>Up</td><td><span title="All Swords:&#013;↓ x4, →, →, ← x3, →&#013Max Random Weapon:&#013↑, ↑, ↓, ↓, ← x5, →">Cheat</span><br>Black 1 (vs CPU)</td></tr>
+	<tr><td><img alt="50" src="img/low-grn.png"></td><td>タクマ<br>TAKUMA</td><td>Down</td><td><span title="All Swords:&#013;↓ x4, →, →, ← x3, →&#013Max Random Weapon:&#013↑, ↑, ↓, ↓, ← x5, →">Cheat</span><br>Black 2 (vs CPU)</td></tr>
+	<tr><td><img alt="51" src="img/one-red.png"></td><td>ユミコ<br>YUMIKO</td><td>One-hand</td><td><span title="All Swords:&#013;↓ x4, →, →, ← x3, →&#013Max Random Weapon:&#013↑, ↑, ↓, ↓, ← x5, →">Cheat</span><br>GovernmentB (vs CPU)</td></tr>
 </tbody>
 </table>
 
 <br><a href='http://validator.w3.org/'>&nbsp;validator.w3.org&nbsp;</a>
 </div>
-<script type="text/javascript">
+<script>
 // author neo neo.infeo.pl
 // licensed under Creatives Common license creativecommons.org/licenses/by-sa/2.0/pl/
 // as a cmp function you may choose natcompare from this website http://sourcefrog.net/projects/natsort/natcompare.js
