--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ thead:first-child{color:#fff;background:#333;font-size: 110%;}
 </tbody>
 </table>
 
-<br><a href='http://validator.w3.org/'>&nbsp;validator.w3.org&nbsp;</a>
+<br><a href='https://validator.w3.org/nu/?doc=https%3A%2F%2Fdrrak.github.io%2Fwots.swords%2F'>&nbsp;validator.w3.org&nbsp;</a>
 </div>
 <script>
 // author neo neo.infeo.pl
