--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@ thead:first-child{color:#fff;background:#333;font-size: 110%;}
 	<tr><td><img alt="47" src="img/sid-blc.png"></td><td>なまくら刀<br>Nama-kura-gatana</td><td>Side</td><td>GovernmentS 40%</td></tr>
 	<tr><td><img alt="48" src="img/one-blc.png"></td><td>なまくら刀<br>Nama-kura-gatana</td><td>One-hand</td><td>GovernmentS 30%</td></tr>
 	
-	<tr><td><img alt="49" src="img/up-blc.png"></td><td>ハルユキ<br>HARUYUKI</td><td>Up</td><td><span title="All Swords:&#013;↓ x4, →, →, ← x3, →&#013Max Random Weapon:&#013;↑, ↑, ↓, ↓, ← x5, →">Cheat</span><br>Black 1 (vs CPU)</td></tr>
-	<tr><td><img alt="50" src="img/low-grn.png"></td><td>タクマ<br>TAKUMA</td><td>Down</td><td><span title="All Swords:&#013;↓ x4, →, →, ← x3, →&#013Max Random Weapon:&#013;↑, ↑, ↓, ↓, ← x5, →">Cheat</span><br>Black 2 (vs CPU)</td></tr>
-	<tr><td><img alt="51" src="img/one-red.png"></td><td>ユミコ<br>YUMIKO</td><td>One-hand</td><td><span title="All Swords:&#013;↓ x4, →, →, ← x3, →&#013Max Random Weapon:&#013;↑, ↑, ↓, ↓, ← x5, →">Cheat</span><br>GovernmentB (vs CPU)</td></tr>
+	<tr><td><img alt="49" src="img/up-blc.png"></td><td>ハルユキ<br>HARUYUKI</td><td>Up</td><td><span title="All Swords:&#013;↓ x4, →, →, ← x3, →&#013;Max Random Weapon:&#013;↑, ↑, ↓, ↓, ← x5, →">Cheat</span><br>Black 1 (vs CPU)</td></tr>
+	<tr><td><img alt="50" src="img/low-grn.png"></td><td>タクマ<br>TAKUMA</td><td>Down</td><td><span title="All Swords:&#013;↓ x4, →, →, ← x3, →&#01;3Max Random Weapon:&#013;↑, ↑, ↓, ↓, ← x5, →">Cheat</span><br>Black 2 (vs CPU)</td></tr>
+	<tr><td><img alt="51" src="img/one-red.png"></td><td>ユミコ<br>YUMIKO</td><td>One-hand</td><td><span title="All Swords:&#013;↓ x4, →, →, ← x3, →&#01;3Max Random Weapon:&#013;↑, ↑, ↓, ↓, ← x5, →">Cheat</span><br>GovernmentB (vs CPU)</td></tr>
 </tbody>
 </table>
 
