--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ thead:first-child{color:#fff;background:#333;font-size: 110%;}
 	<tr><td><img alt="21" src="img/up-grn.png"></td><td>鬼火<br>Oni-bi</td><td>Up</td><td>Black 0.8%<br>GovernmentS 10.5%</td></tr>
 	<tr><td><img alt="22" src="img/up-red.png"></td><td>当方不败 or 当方不敗<br>Tou-hou-fu-hai</td><td>Up</td><td>Black 1.3%<br>GovernmentS 5%</td></tr>
 	<tr><td><img alt="23" src="img/up-sp3.png"></td><td>鲛肌刀 or 鮫肌刀<br>Same-hada-tou</td><td>Up</td><td>刈部星雲<br>Karibe's Sword</td></tr>
-	<tr><td><img alt="24" src="img/up-sp4.png"></td><td>铁观音<br>Tekkannon</td><td>Up</td><td>Red random</td></tr>
+	<tr><td><img alt="24" src="img/up-sp4.png"></td><td>鉄観音<br>Tekkannon</td><td>Up</td><td>Red random</td></tr>
 	
 	<tr><td><img alt="25" src="img/sid-blc.png"></td><td>十戒丸<br>Jyuk-kai-maru</td><td>Side</td><td>知床総一郎<br>Shiretoko's Sword</td></tr>
 	<tr><td><img alt="26" src="img/sid-blc.png"></td><td>花鸟风月 or 花鳥風月<br>Ka-chyou-fuu-getsu</td><td>Side</td><td>東横苑仙<br>Toyoko's Sword</td></tr>
