--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@ thead:first-child{color:#fff;background:#333;font-size: 110%;}
 	<tr><td><img alt="4" src="img/med-blc.png"></td><td>二代菊正<br>Ni-dai-kiku-masa</td><td>Middle</td><td>日向隼人<br>Hyuga's 1st Sword</td></tr>
 	<tr><td><img alt="5" src="img/med-red.png"></td><td>毒虫<br>Doku-mushi</td><td>Middle</td><td>Black 1%<br>Red 0.5%</td></tr>
 	<tr><td><img alt="6" src="img/med-grn.png"></td><td>ウラオトギ<br>Ura-otogi</td><td>Middle</td><td>Black 1%<br>Red 2.5%</td></tr>
-	<tr><td><img alt="7" src="img/med-blc.png"></td><td>东风 or 東風<br>Ton-puu</td><td>Middle</td><td>Red 2.3%</td></tr>
+	<tr><td><img alt="7" src="img/med-blc.png"></td><td>東風<br>Ton-puu</td><td>Middle</td><td>Red 2.3%</td></tr>
 	<tr><td><img alt="8" src="img/med-blc.png"></td><td>初代玉光<br>Shyo-dai-tama-hikari</td><td>Middle</td><td>Red 14%</td></tr>
 	<tr><td><img alt="9" src="img/med-grn.png"></td><td>中元<br>Chyuu-gen</td><td>Middle</td><td>Black 0.5%<br>Red 10.5%</td></tr>
 	<tr><td><img alt="10" src="img/med-red.png"></td><td>権太<br>Gon-buto</td><td>Middle</td><td>Red 0.5%<br>GovernmentS 5%</td></tr>
 	
-	<tr><td><img alt="11" src="img/low-blc.png"></td><td>一发丸 or 一発丸<br>Ip-patsu-maru</td><td>Down</td><td>坪内八郎<br>Tsubohachi's Sword</td></tr>
+	<tr><td><img alt="11" src="img/low-blc.png"></td><td>一発丸<br>Ip-patsu-maru</td><td>Down</td><td>坪内八郎<br>Tsubohachi's Sword</td></tr>
 	<tr><td><img alt="12" src="img/low-sp1.png"></td><td>十六門<br>Jyuu-roku-mon</td><td>Down</td><td>保世大佐エ門<br>Jose's Weapon</td></tr>
 	<tr><td><img alt="13" src="img/low-grn.png"></td><td>マワルセカイ<br>Mawaru-se-kai</td><td>Down</td><td>Black 2.5%</td></tr>
 	<tr><td><img alt="14" src="img/low-blc.png"></td><td>纲走<br>A-bashiri</td><td>Down</td><td>Black 13.4%</td></tr>
@@ -60,12 +60,12 @@ thead:first-child{color:#fff;background:#333;font-size: 110%;}
 	<tr><td><img alt="19" src="img/up-sp2.png"></td><td>竹富士<br>Take-fu-ji</td><td>Up</td><td>堂島軍二<br>Dojima's Hammer</td></tr>
 	<tr><td><img alt="20" src="img/up-blc.png"></td><td>恐山<br>Osore-zan</td><td>Up</td><td>Red 10%</td></tr>
 	<tr><td><img alt="21" src="img/up-grn.png"></td><td>鬼火<br>Oni-bi</td><td>Up</td><td>Black 0.8%<br>GovernmentS 10.5%</td></tr>
-	<tr><td><img alt="22" src="img/up-red.png"></td><td>当方不败 or 当方不敗<br>Tou-hou-fu-hai</td><td>Up</td><td>Black 1.3%<br>GovernmentS 5%</td></tr>
+	<tr><td><img alt="22" src="img/up-red.png"></td><td>当方不敗<br>Tou-hou-fu-hai</td><td>Up</td><td>Black 1.3%<br>GovernmentS 5%</td></tr>
 	<tr><td><img alt="23" src="img/up-sp3.png"></td><td>鲛肌刀 or 鮫肌刀<br>Same-hada-tou</td><td>Up</td><td>刈部星雲<br>Karibe's Sword</td></tr>
 	<tr><td><img alt="24" src="img/up-sp4.png"></td><td>鉄観音<br>Tekkannon</td><td>Up</td><td>Red random</td></tr>
 	
 	<tr><td><img alt="25" src="img/sid-blc.png"></td><td>十戒丸<br>Jyuk-kai-maru</td><td>Side</td><td>知床総一郎<br>Shiretoko's Sword</td></tr>
-	<tr><td><img alt="26" src="img/sid-blc.png"></td><td>花鸟风月 or 花鳥風月<br>Ka-chyou-fuu-getsu</td><td>Side</td><td>東横苑仙<br>Toyoko's Sword</td></tr>
+	<tr><td><img alt="26" src="img/sid-blc.png"></td><td>花鳥風月<br>Ka-chyou-fuu-getsu</td><td>Side</td><td>東横苑仙<br>Toyoko's Sword</td></tr>
 	<tr><td><img alt="27" src="img/sid-blc.png"></td><td>千草<br>Chi-gusa</td><td>Side</td><td>Black 7.5%</td></tr>
 	<tr><td><img alt="28" src="img/sid-grn.png"></td><td>浮雲<br>Uki-kumo</td><td>Side</td><td>Black 6.3%<br>Red 1.5%</td></tr>
 	<tr><td><img alt="29" src="img/sid-sp1.png"></td><td>ニイタカヤマ<br>Nii-taka-yama</td><td>Side</td><td>玉川上水<br>G. Tamagawa's Sword</td></tr>
