--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ thead:first-child{color:#fff;background:#333;font-size: 110%;}
 <tbody>
 	<tr><td><img alt="1" src="img/med-blc.png"></td><td>中庸刀<br>Chyuu-you-tou</td><td>Middle</td><td>Starting Sword</td></tr>
 	<tr><td><img alt="2" src="img/med-blc.png"></td><td>活火山<br>Katsu-ka-zan</td><td>Middle</td><td>ドナドナ<br>Don's Sword</td></tr>
-	<tr><td><img alt="3" src="img/med-blc.png"></td><td>爱染 or 愛染<br>Ai-sen</td><td>Middle</td><td>黒生邑咲<br>Murasaki's Sword</td></tr>
+	<tr><td><img alt="3" src="img/med-blc.png"></td><td>愛染<br>Ai-sen</td><td>Middle</td><td>黒生邑咲<br>Murasaki's Sword</td></tr>
 	<tr><td><img alt="4" src="img/med-blc.png"></td><td>二代菊正<br>Ni-dai-kiku-masa</td><td>Middle</td><td>日向隼人<br>Hyuga's 1st Sword</td></tr>
 	<tr><td><img alt="5" src="img/med-red.png"></td><td>毒虫<br>Doku-mushi</td><td>Middle</td><td>Black 1%<br>Red 0.5%</td></tr>
 	<tr><td><img alt="6" src="img/med-grn.png"></td><td>ウラオトギ<br>Ura-otogi</td><td>Middle</td><td>Black 1%<br>Red 2.5%</td></tr>
