--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ thead:first-child{color:#fff;background:#333;font-size: 110%;}
 	<tr><td><img alt="35" src="img/one-blc.png"></td><td>彼岸<br>Hi-gan</td><td>One-hand</td><td>Black 2.5%</td></tr>
 	<tr><td><img alt="36" src="img/one-grn.png"></td><td>大納言<br>Dai-na-gon</td><td>One-hand</td><td>GovernmentB 70%</td></tr>
 	<tr><td><img alt="37" src="img/one-red.png"></td><td>紅天女<br>Kurenai-ten-nyo</td><td>One-hand</td><td>Red 1.8%<br>GovernmentB 5%</td></tr>
-	<tr><td><img alt="38" src="img/one-sp2.png"></td><td>巨蜂<br>Kyoho</td><td>One-hand</td><td>Black random</td></tr>
+	<tr><td><img alt="38" src="img/one-sp2.png"></td><td>巨峰<br>Kyoho</td><td>One-hand</td><td>Black random</td></tr>
 	
 	<tr><td><img alt="39" src="img/nin-blc.png"></td><td>残月<br>Zan-getsu</td><td>Ninja</td><td>日向隼人<br>Hyuga's 2nd Sword</td></tr>
 	<tr><td><img alt="40" src="img/nin-blc.png"></td><td>忍者刀<br>Nin-ja-tou</td><td>Ninja</td><td>Ninja 95%</td></tr>
