--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ thead:first-child{color:#fff;background:#333;font-size: 110%;}
 	<tr><td><img alt="11" src="img/low-blc.png"></td><td>一発丸<br>Ip-patsu-maru</td><td>Down</td><td>坪内八郎<br>Tsubohachi's Sword</td></tr>
 	<tr><td><img alt="12" src="img/low-sp1.png"></td><td>十六門<br>Jyuu-roku-mon</td><td>Down</td><td>保世大佐エ門<br>Jose's Weapon</td></tr>
 	<tr><td><img alt="13" src="img/low-grn.png"></td><td>マワルセカイ<br>Mawaru-se-kai</td><td>Down</td><td>Black 2.5%</td></tr>
-	<tr><td><img alt="14" src="img/low-blc.png"></td><td>纲走<br>A-bashiri</td><td>Down</td><td>Black 13.4%</td></tr>
+	<tr><td><img alt="14" src="img/low-blc.png"></td><td>網走<br>A-bashiri</td><td>Down</td><td>Black 13.4%</td></tr>
 	<tr><td><img alt="15" src="img/low-grn.png"></td><td>馬並<br>Uma-nami</td><td>Down</td><td>Black 16.2%<br>GovernmentS 5%</td></tr>
 	<tr><td><img alt="16" src="img/low-red.png"></td><td>オホーツク<br>0-hootsuku</td><td>Down</td><td>Black 0.8%, Red 1.0%<br>GovernmentS 5%</td></tr>
 	<tr><td><img alt="17" src="img/low-sp2.png"></td><td>十万石<br>Jumangoku</td><td>Down</td><td>Black random</td></tr>
