--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Samurai Dou (PSP) - Weapon List</title>
 <style>
 html,body{font:14px "Courier New",serif;margin:0 auto;padding:0 3px;background:#511010;}
